Fix spacing author name.

--- a/src/components/Styles/Post.scss
+++ b/src/components/Styles/Post.scss
@@ -150,7 +150,7 @@
 				text-transform:none;
 				font-weight:500;
 				line-height:1.4;
-				margin-top:0.5em;
+				margin-top:1.5em;
 				margin-bottom:0.75em;
 				 @include mega {
 				    font-size:2.3em;
